--- a/index.html
+++ b/index.html
@@ -14,79 +14,200 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 13px; text-align: center;  font-weight: 700;}
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color: #fff; }
   </style>
 </head>
 <body>
 
 
+  <div class="bg-top"></div>
+
+  <div class="container">
+    <section>
+      <div class="container-info">
+        <h3>social media dashboard</h3>
+        <p> total followers: 23,004</p>
+      </div>
+      <div class="container-button">
+        <p>dark mode</p>
+        <div class="boton">
+          <input type="checkbox" id="btn-switch">
+          <label for="btn-switch" class="lbl-switch"></label>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <div class="container-sociales">
+    <div class="social-facebook">
+      <div class="icon-facebook">
+        <img src="images/icon-facebook.svg" alt="icon-facebok">
+        <p>@nathanf</p>
+      </div>
+      <h2>1987</h2>
+      <p class="follow">followers</p>
+      <div class="arrow">
+        <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+        <p>12 Today</p>
+      </div>
+    </div>
+    <div class="social-twitter social-facebook">
+      <div class="icon-facebook">
+        <img src="images/icon-twitter.svg" alt="icon-facebok">
+        <p>@nathanf</p>
+      </div>
+      <h2>1044</h2>
+      <p class="follow">followers</p>
+      <div class="arrow">
+        <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+        <p class="text-green">99 Today</p>
+      </div>
+    </div>
+    <div class="social-instagram social-facebook">
+      <div class="icon-facebook">
+        <img src="images/icon-instagram.svg" alt="icon-instagram">
+        <p>@realnathanf</p>
+      </div>
+      <h2>11K</h2>
+      <p class="follow">followers</p>
+      <div class="arrow">
+        <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+        <p class="text-green">1099 Today</p>
+      </div>
+    </div>
+    <div class="social-youtube social-facebook">
+      <div class="icon-facebook">
+        <img src="images/icon-youtube.svg" alt="icon-facebok">
+        <p>
+          Nathan F.</p>
+      </div>
+      <h2>8239</h2>
+      <p class="follow">Subscribers</p>
+      <div class="arrow">
+        <img src="images/icon-down.svg" alt="icon-arrow" class="arrow">
+        <p class="text-red">144 Today</p>
+      </div>
+    </div>
+  </div> <!--CONTAINER-REDES SOCIALES -->
+
+  <div class="container-estadisticas">
+    <p class="over">Overview - Today</p>
+    <div class="helper">
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Page Views</p>
+          <img src="images/icon-facebook.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">87</p>
+          <div class="arrow">
+            <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+            <p class="text-green">3 %</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Likes</p>
+          <img src="images/icon-facebook.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">52</p>
+          <div class="arrow">
+            <img src="images/icon-down.svg" alt="icon-arrow" class="arrow">
+            <p class="text-red">2 %</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Likes</p>
+          <img src="images/icon-instagram.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">5462</p>
+          <div class="arrow">
+            <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+            <p class="text-green">2257 %</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Profile Views</p>
+          <img src="images/icon-instagram.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">52K</p>
+          <div class="arrow">
+            <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+            <p class="text-green">1375 %</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Retweets</p>
+          <img src="images/icon-twitter.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">117</p>
+          <div class="arrow">
+            <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+            <p class="text-green">303%</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Likes</p>
+          <img src="images/icon-twitter.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">507</p>
+          <div class="arrow">
+            <img src="images/icon-up.svg" alt="icon-arrow" class="arrow">
+            <p class="text-green">583%</p>
+          </div>
+        </div>
+      </div>
 
 
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Likes</p>
+          <img src="images/icon-youtube.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">107</p>
+          <div class="arrow">
+            <img src="images/icon-down.svg" alt="icon-arrow" class="arrow">
+            <p class="text-red">19%</p>
+          </div>
+        </div>
+      </div>
 
-<!-- 
-  Social Media Dashboard
-  Total Followers: 23,004
+      <div class="card-estadisticos">
+        <div class="icons">
+          <p>Total Views</p>
+          <img src="images/icon-youtube.svg" alt="icon-facebok">
+        </div>
+        <div class="div-arrow">
+          <p class="number">1407</p>
+          <div class="arrow">
+            <img src="images/icon-down.svg" alt="icon-arrow" class="arrow">
+            <p class="text-red">12%</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> <!--CONTEINER-ESTADISTICAS-->
 
-  Dark Mode
-
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
-
-
-  Overview - Today
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12% -->
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.instagram.com/dev_rodbd/">David Rodriguez Badillo</a>.
